chore: Update wrangler.toml for deployment

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,9 @@ main = "src/index.ts"
 compatibility_date = "2025-02-20"
 compatibility_flags = ["nodejs_compat"]
 
+# Deploy to workers.dev subdomain
+workers_dev = true
+
 # Environment variables
 [vars]
 ENVIRONMENT = "development"
@@ -13,12 +16,4 @@ ENVIRONMENT = "development"
 binding = "DB"
 database_name = "arroyyan-db"
 database_id = "bf9bfb82-e3c6-47b3-b8c4-d6d3effc4510"
-
-# D1 Database for production
-[env.production]
-[[env.production.d1_databases]]
-binding = "DB"
-database_name = "arroyyan-db"
-database_id = "<YOUR_PRODUCTION_DATABASE_ID>"
-[env.production.vars]
-ENVIRONMENT = "production"
+migrations_dir = "drizzle"
