--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "scripts": {
     "dev": "wrangler dev",
+    "dev:local": "bun run --hot src/server.ts",
+    "start": "bun run src/server.ts",
     "deploy": "wrangler deploy",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "wrangler d1 migrations apply arroyyan-db",
+    "db:migrate": "bunx drizzle-kit migrate",
     "db:migrate:remote": "wrangler d1 migrations apply arroyyan-db --remote",
     "db:studio": "drizzle-kit studio",
     "test": "bun test",
@@ -22,13 +24,17 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.0",
-    "better-auth": "^1.2.0",
+    "@libsql/client": "^0.17.0",
+    "bcryptjs": "^3.0.3",
     "drizzle-orm": "^0.39.0",
     "hono": "^4.7.0",
+    "jsonwebtoken": "^9.0.3",
     "zod": "^3.24.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "drizzle-kit": "^0.30.0",
     "wrangler": "^4.0.0"
   }
