--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "arroyyan"
-main = "src/index.ts"
+main = "index.ts"
 compatibility_date = "2025-02-20"
 compatibility_flags = ["nodejs_compat"]
 
