--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
+    "test:qa": "bun run test-qa.ts",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/"
   },
